# OpenGL_Scene

./: .ycm_extra_conf.py  CMakeLists.txt
include/: Camera.hpp  Cube.hpp  Light.hpp  Mesh.hpp  Model.hpp  Rectangle.hpp  Shader.hpp  Shape.hpp  Texture.hpp  Transform.hpp  Triangle.hpp
include/glad/: glad.h
resources/: fragment_shader.glsl  light_fragment_shader.glsl  vertex_shader.glsl
src/: Camera.cpp  Rectangle.cpp  Shader.cpp  Shape.cpp  Texture.cpp  fragment_shader.fs  glad.c  main.cpp  vertex_shader.vs
